Share category mapping and make item category optional in API (#153)
